--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -27,7 +27,7 @@ jobs:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
     - name: Terraform Init
-      run: terraform init -var gcp_project_id=${{ gcp_project_id }} terraform_org=${{ terraform_org }}
+      run: terraform init -var gcp_project_id=${{ secrets.gcp_project_id }} terraform_org=${{ secrets.terraform_org }}
 
     - name: Terraform Destroy
       run: terraform destroy -auto-approve
