Move vars to destroy command

--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -24,7 +24,7 @@ jobs:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
     - name: Terraform Init
-      run: terraform init -var gcp_project_id=${{ secrets.gcp_project_id }} -var terraform_org=${{ secrets.terraform_org }}
+      run: terraform init
 
     - name: Terraform Destroy
-      run: terraform destroy -auto-approve
+      run: terraform destroy -auto-approve -var gcp_project_id=${{ secrets.gcp_project_id }} -var terraform_org=${{ secrets.terraform_org }}
